Formatted SecuritiesChart and fixed some Sonar messages